--- a/integration/httpstatusintegrationtests/package.json
+++ b/integration/httpstatusintegrationtests/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "axios": "^0.27.2",
+    "config": "^3.3.7",
     "jest": "^28.1.3",
     "jest-each": "^28.1.3",
     "jest-fixed-default-reporter": "^2.0.1"
