--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,15 +23,11 @@ on:
       - origin/main
 
 jobs:
-  ubuntu-latest:
-    name: ubuntu-latest
-    runs-on: ubuntu-latest
+  windows-latest:
+    name: windows-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Check pwd
-        run: pwd
-      - name: git status
-        run: git status
       - name: Cache .nuke/temp, ~/.nuget/packages
         uses: actions/cache@v2
         with:
