set everything back to ubuntu latest

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,9 +19,9 @@ name: pull-request
 on: [pull_request]
 
 jobs:
-  ubuntu-18_04:
-    name: ubuntu-18_04
-    runs-on: ubuntu-18.04
+  ubuntu-latest:
+    name: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Cache .nuke/temp, ~/.nuget/packages
