--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,13 +23,11 @@ on:
       - origin/main
 
 jobs:
-  ubuntu-18_04:
-    name: ubuntu-18_04
-    runs-on: ubuntu-18.04
+  ubuntu-latest:
+    name: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
       - name: Cache .nuke/temp, ~/.nuget/packages
         uses: actions/cache@v2
         with:
