--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,11 @@
 #
 # </auto-generated>
 # ------------------------------------------------------------------------------
+#
+# Customisations:
+# BE SURE TO RE-APPLY THE CUSTOMISATIONS IF YOU RE-GENERATE THIS FILE.
+# actions/checkout@v2 -> set to @v3
+# actions/checkout -> add fetch-depth: 0
 
 name: release
 
@@ -27,7 +32,9 @@ jobs:
     name: ubuntu-latest
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Cache .nuke/temp, ~/.nuget/packages
         uses: actions/cache@v2
         with:
