--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,14 +18,15 @@
 # BE SURE TO RE-APPLY THE CUSTOMISATIONS IF YOU RE-GENERATE THIS FILE.
 # actions/checkout@v2 -> set to @v3
 # actions/checkout -> add fetch-depth: 0
+# Set the name of the job to 'pull-request'
 
 name: pull-request
 
 on: [pull_request]
 
 jobs:
-  ubuntu-latest:
-    name: ubuntu-latest
+  pull-request:
+    name: pull-request
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
