--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,39 +13,35 @@
 #
 # </auto-generated>
 # ------------------------------------------------------------------------------
-#
-# Customisations:
-# BE SURE TO RE-APPLY THE CUSTOMISATIONS IF YOU RE-GENERATE THIS FILE.
-# actions/checkout@v2 -> set to @v3
-# actions/checkout -> add fetch-depth: 0
-# Set the name of the job to 'pull-request'
 
 name: pull-request
 
 on: [pull_request]
 
 jobs:
-  pull-request:
-    name: pull-request
+  ubuntu-latest:
+    name: ubuntu-latest
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Cache .nuke/temp, ~/.nuget/packages
-        uses: actions/cache@v2
+      - name: 'Cache: .nuke/temp, ~/.nuget/packages'
+        uses: actions/cache@v3
         with:
           path: |
             .nuke/temp
             ~/.nuget/packages
-          key: ${{ runner.os }}-${{ hashFiles('**/global.json', '**/*.csproj') }}
-      - name: Run './build.cmd Cover IntegrationTest'
+          key: ${{ runner.os }}-${{ hashFiles('**/global.json', '**/*.csproj', '**/Directory.Packages.props') }}
+      - name: 'Run: Cover, IntegrationTest'
         run: ./build.cmd Cover IntegrationTest
-      - uses: actions/upload-artifact@v1
+      - name: 'Publish: TestCoverage'
+        uses: actions/upload-artifact@v3
         with:
           name: TestCoverage
           path: tests/TestCoverage
-      - uses: actions/upload-artifact@v1
+      - name: 'Publish: TestResults'
+        uses: actions/upload-artifact@v3
         with:
           name: TestResults
           path: tests/TestResults
