--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,12 +13,6 @@
 #
 # </auto-generated>
 # ------------------------------------------------------------------------------
-#
-# Customisations:
-# BE SURE TO RE-APPLY THE CUSTOMISATIONS IF YOU RE-GENERATE THIS FILE.
-# actions/checkout@v2 -> set to @v3
-# actions/checkout -> add fetch-depth: 0
-# Set the name of the job to 'test'
 
 name: test
 
@@ -29,23 +23,24 @@ on:
       - origin/main
 
 jobs:
-  test:
-    name: test
+  ubuntu-latest:
+    name: ubuntu-latest
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Cache .nuke/temp, ~/.nuget/packages
-        uses: actions/cache@v2
+      - name: 'Cache: .nuke/temp, ~/.nuget/packages'
+        uses: actions/cache@v3
         with:
           path: |
             .nuke/temp
             ~/.nuget/packages
-          key: ${{ runner.os }}-${{ hashFiles('**/global.json', '**/*.csproj') }}
-      - name: Run './build.cmd Test'
+          key: ${{ runner.os }}-${{ hashFiles('**/global.json', '**/*.csproj', '**/Directory.Packages.props') }}
+      - name: 'Run: Test'
         run: ./build.cmd Test
-      - uses: actions/upload-artifact@v1
+      - name: 'Publish: TestResults'
+        uses: actions/upload-artifact@v3
         with:
           name: TestResults
           path: tests/TestResults
